--- a/src/sass/blocks/small-blocks/parallax.sass
+++ b/src/sass/blocks/small-blocks/parallax.sass
@@ -103,15 +103,17 @@
     right: 92%
     top: -650px
   &-27
-    right: 86%
+    left: calc((100% - 1200px) / 2 - 150px)
     bottom: -300px
   &-28
     left: 45%
     bottom: -400px
   &-29
-    left: 79%
+    right: calc((100% - 1200px) / 2 - 30px)
     top: -300px
     z-index: 2
+    +r(1200)
+      right: calc((100% - 960px) / 2 - 30px)
   &-30
     left: 86%
     bottom: -200px
