--- a/src/sass/blocks/vacancy/vacancy.sass
+++ b/src/sass/blocks/vacancy/vacancy.sass
@@ -50,6 +50,7 @@
     background-color: #fff
     box-shadow: 0 10px 40px rgba(51, 51, 51, 0.1)
     border-radius: 10px
+    overflow: hidden
     +trans
     +r(767)
       flex-direction: column
@@ -123,6 +124,8 @@
       text-transform: uppercase
       letter-spacing: 0.1em
       border-radius: 1px
+    &:hover, &:focus
+      background-color: lighten($title-color, 35%)
 
 .vacancy-adv
   display: flex
