Added styles for header, and added layout to page.php

--- a/src/sass/blocks/header/header.sass
+++ b/src/sass/blocks/header/header.sass
@@ -5,6 +5,13 @@
   z-index: 10
   width: 100%
   padding: 15px 0
+  &--inner
+    .phone__item:last-child
+      .phone
+        &__tel
+          color: $darken
+        &__descr
+          color: $darken
   .container
     display: flex
     align-items: flex-start
