--- a/src/sass/blocks/small-blocks/small-blocks.sass
+++ b/src/sass/blocks/small-blocks/small-blocks.sass
@@ -2,3 +2,10 @@
 @import 'phone'
 @import 'parallax'
 @import 'scroll-nav'
+
+section.page
+  padding-top: 250px
+  +r(992)
+    padding-top: 200px
+  +r(767)
+    padding-top: 150px
