Style for client

--- a/src/sass/blocks/vacancy/vacancy.sass
+++ b/src/sass/blocks/vacancy/vacancy.sass
@@ -152,7 +152,7 @@
       width: 70px
       height: 70px
       margin-bottom: 25px
-      background-color: $title-color
+      background-color: $accent
       border-radius: 5px
       box-shadow: 2px 10px 35px rgba(34, 34, 34, 0.2)
       text-align: center
