--- a/src/sass/blocks/services/services-card.sass
+++ b/src/sass/blocks/services/services-card.sass
@@ -7,12 +7,13 @@
   box-shadow: 0 10px 40px rgba(51, 51, 51, 0.1)
   +trans
   &:hover
-    background-color: #010101
+    background-color: $accent
     p
       color: #fff
     .services-card
       &__title
         color: #fff
+        border-color: rgba(#fff, 0.5)
       &__link
         color: #fff
   p
