Change style for header

--- a/src/sass/blocks/small-blocks/logo.sass
+++ b/src/sass/blocks/small-blocks/logo.sass
@@ -1,13 +1,14 @@
 .logo
   display: flex
-  align-items: flex-end
+  align-items: center
   +r(576)
     width: 90px
   &__descr
     margin-bottom: 0
     margin-left: 60px
     padding-left: 45px
-    padding-top: 20px
+    padding-top: 10px
+    padding-bottom: 10px
     font-size: 13px
     font-weight: 700
     text-transform: uppercase
