Change background color on button

--- a/src/sass/blocks/vacancy/vacancy.sass
+++ b/src/sass/blocks/vacancy/vacancy.sass
@@ -103,6 +103,7 @@
     opacity: 0
     visibility: hidden
     pointer-events: none
+    background-color: lighten($title-color, 35%)
     +trans
     +r(992)
       padding: 8px 20px
@@ -125,7 +126,7 @@
       letter-spacing: 0.1em
       border-radius: 1px
     &:hover, &:focus
-      background-color: lighten($title-color, 35%)
+      background-color: #000
 
 .vacancy-adv
   display: flex
